--- a/public/css/add.css
+++ b/public/css/add.css
@@ -97,6 +97,10 @@
     width: auto
 }
 
+.index-nav-title{
+    color: #FFF;
+}
+
 @media screen and (max-width: 767px) {
     .site-main .container#top-news .a-01.bx-wide.title .btn-emergency-notices {
         width:90% !important
@@ -1314,4 +1318,3 @@
     opacity: 0.7
 }
 
-/*# sourceMappingURL=add.css.map */
