--- a/public/css/base.css
+++ b/public/css/base.css
@@ -3975,3 +3975,40 @@ strong {
 .m-button i.fa-external-link-alt {
     right: 8px
 }
+
+.boxcontainer {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center; 
+    padding: 100px 0 0 80px;
+}
+
+.boxcontainer > div > a {
+    text-decoration:none;
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    border: rgb(15, 209, 231) solid 3px;
+    border-radius: 15px;
+    margin: 10px;
+    width: 12rem;
+    height: 22rem;
+}
+
+.card-img-top{
+    border-radius: 10px 10px 0 0;
+    object-fit: cover;
+    display: block;
+    width: 100%;
+    height: 120px;
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+.card-body > p {
+    font-size:small;
+    color:#000;
+}
