--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,4 +1,6 @@
-@import url("https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700");@import url("https://fonts.googleapis.com/css?family=Lato:400,700");.ps {
+@import url("https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700");
+@import url("https://fonts.googleapis.com/css?family=Lato:400,700");
+.ps {
     touch-action: auto;
     overflow: hidden !important;
     -ms-overflow-style: none
